Change sybilmayard.tech to sybilmayard.com

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ permalink: /
         <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybilmayard.tech/" />
+        <meta property="og:url" content="https://sybilmayard.com/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -35,18 +35,18 @@ permalink: /
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/" />
-        <link rel="stylesheet" href="https://sybilmayard.tech/styles.css" type="text/css">
+        <link rel="canonical" href="https://sybilmayard.com/" />
+        <link rel="stylesheet" href="https://sybilmayard.com/styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://sybilmayard.tech/favicon.png">
+        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
     </head>
     <body>
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.tech/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybilmayard.com/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -54,17 +54,17 @@ permalink: /
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.tech/events">Events</a>
-                    <a href="https://sybilmayard.tech/building-business-shopify">Shopify Course</a>                   
+                    <a href="https://sybilmayard.com/events">Events</a>
+                    <a href="https://sybilmayard.com/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/about">About</a>
-                            <a href="https://sybilmayard.tech/clients">Clients</a>
-                            <a href="https://sybilmayard.tech/services">Services</a>
-                            <a href="https://sybilmayard.tech/faqs">FAQs</a>
+                            <a href="https://sybilmayard.com/about">About</a>
+                            <a href="https://sybilmayard.com/clients">Clients</a>
+                            <a href="https://sybilmayard.com/services">Services</a>
+                            <a href="https://sybilmayard.com/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -72,10 +72,10 @@ permalink: /
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/vidcareer">VidCareer</a>
-                            <a href="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
-                            <a href="https://sybilmayard.tech/tagnav">TagNav</a>
-                            <a href="https://sybilmayard.tech/my-personal-portfolio">My Personal Portfolio</a>
+                            <a href="https://sybilmayard.com/vidcareer">VidCareer</a>
+                            <a href="https://sybilmayard.com/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://sybilmayard.com/tagnav">TagNav</a>
+                            <a href="https://sybilmayard.com/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -83,13 +83,13 @@ permalink: /
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="https://sybilmayard.tech/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
-                            <a href="https://sybilmayard.tech/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
+                            <a href="https://sybilmayard.com/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://sybilmayard.com/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://sybilmayard.com/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://sybilmayard.com/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="https://sybilmayard.tech/contact">Contact</a>
+                    <a href="https://sybilmayard.com/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -101,7 +101,7 @@ permalink: /
                 <h4>Taking your online business further...</h4>
                 <h1>Sybiltech</h1>
                 <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
-                <a class="btn-primary" href="https://sybilmayard.tech/services">My Services</a>
+                <a class="btn-primary" href="https://sybilmayard.com/services">My Services</a>
             </div>
         </div>
         <div class="services section">
@@ -132,7 +132,7 @@ permalink: /
                     </div>
                 </div>
                 <div class="center padding-bottom">
-                    <a class="btn-primary" href="https://sybilmayard.tech/services">View Services</a>   
+                    <a class="btn-primary" href="https://sybilmayard.com/services">View Services</a>   
                 </div>
             </div>
         </div>
@@ -143,30 +143,30 @@ permalink: /
                 worked with:</p>
             <div class="row">
                 <div class="col-3">                        
-                    <a href="https://sybilmayard.tech/clients#audrey-zeitoun-coaching">
-                        <img src="https://sybilmayard.tech/images/clients/Audrey-Zeitoun-Coaching.png" 
+                    <a href="https://sybilmayard.com/clients#audrey-zeitoun-coaching">
+                        <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.png" 
                         alt="Audrey Zeitoun Coaching"></a>
                     <h4>Audrey Zeitoun Coaching</h4>
                 </div>
                 <div class="col-3">                    
-                <a href="https://sybilmayard.tech/clients#find-the-balance"><img src="https://sybilmayard.tech/images/clients/find-the-balance.PNG" 
+                <a href="https://sybilmayard.com/clients#find-the-balance"><img src="https://sybilmayard.com/images/clients/find-the-balance.PNG" 
                     alt="Find the Balance"></a>
                 <h4>Find the Balance</h4>
                 </div>
                 <div class="col-3">                       
-                    <a href="https://sybilmayard.tech/clients#pathways-21"><img src="https://sybilmayard.tech/images/clients/Pathways-21.png" 
+                    <a href="https://sybilmayard.com/clients#pathways-21"><img src="https://sybilmayard.com/images/clients/Pathways-21.png" 
                         alt="Pathways 21"></a>
                     <h4>Pathways 21</h4>
                 </div>
                 <div class="col-3">                    
-                    <a href="https://sybilmayard.tech/clients#gdpr-compliance-consultancy">
-                        <img src="https://sybilmayard.tech/images/clients/The-GDPR-Compliance-Consultancy.png" 
+                    <a href="https://sybilmayard.com/clients#gdpr-compliance-consultancy">
+                        <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.png" 
                         alt="The GDPR Compliance Consultancy"></a>
                 <h4>The GDPR Compliance Consultancy</h4>
                 </div>
             </div>
             <div class="center padding-bottom">
-                <a class="btn-primary" href="https://sybilmayard.tech/clients">View All Clients</a>   
+                <a class="btn-primary" href="https://sybilmayard.com/clients">View All Clients</a>   
             </div>
         </div>
         <div class="events section">
@@ -175,12 +175,12 @@ permalink: /
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
-                        <img src="https://sybilmayard.tech/images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
+                        <img src="https://sybilmayard.com/images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
                     </div>
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
                                 series teaching you how to start your e-commerce business using Shopify.</p>
-                        <a class="btn-cnt" href="https://sybilmayard.tech/events">View Events</a>          
+                        <a class="btn-cnt" href="https://sybilmayard.com/events">View Events</a>          
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@ permalink: /
                                 hard worker.<br>I would recommend her to anyone looking for a partner 
                                 to nail your website!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.tech/images/KYOSK-Logo.png" alt="KYOSK logo">
+                                <img src="https://sybilmayard.com/images/KYOSK-Logo.png" alt="KYOSK logo">
                             </div>
                             <h4>Shaheen Javid</h4>
                             <p class="center">CEO,<br>
@@ -218,7 +218,7 @@ permalink: /
                                 explanations. I would highly recommend Sybil's 
                                 services to anyone!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.tech/images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
+                                <img src="https://sybilmayard.com/images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                             </div>
                             <h4>Freddie Ryder</h4>
                             <p class="center">CEO,<br>
@@ -235,7 +235,7 @@ permalink: /
                                 Her work is of a high quality and she is able to work both as part 
                                 of a team and on her own initiative.</p>
                             <div class="center">
-                                <img src="https://sybilmayard.tech/images/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
+                                <img src="https://sybilmayard.com/images/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
                             </div>
                             <h4>Gary Parker</h4>
                             <p class="center">Director,<br>
@@ -251,7 +251,7 @@ permalink: /
                                 Sybil to anyone wanting a high quality, personalised and reasonably 
                                 priced service. Her work is top class!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.tech/images/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
+                                <img src="https://sybilmayard.com/images/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
                             </div>
                             <h4>Audrey Zeitoun</h4>
                             <p class="center">Life Transitions Coach,<br>
@@ -268,19 +268,19 @@ permalink: /
                 <div class="row">
                     <div class="col-4">
                         <h4>Google Digital Garage Certified</h4>
-                        <img src="https://sybilmayard.tech/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                        <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
                             alt="Sybil Mayard Google Digital Garage The Fundamentals of Digital Marketing certificate">
                     </div>
                     <div class="col-4">
                     <h4>Yoast Academy Certified</h4>
                     <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
                         target="_blank" rel="noopener noreferrer">
-                        <img src="https://sybilmayard.tech/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
+                        <img src="https://sybilmayard.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
                             alt="Sybil Mayard Yoast for Beginners certificate"></a>
                     </div>
                     <div class="col-4">
                         <h4>Google Analytics Academy Certified</h4>
-                        <img src="https://sybilmayard.tech/images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
+                        <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
                             alt="Sybil Mayard Google Analytics for Beginners certificate">
                     </div>
                 </div>
@@ -290,7 +290,7 @@ permalink: /
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.tech/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.com/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -303,11 +303,11 @@ permalink: /
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.tech/about">About</a></p>
-                        <p><a href="https://sybilmayard.tech/services">Services</a></p>
-                        <p><a href="https://sybilmayard.tech/contact">Contact</a></p>
-                        <p><a href="https://sybilmayard.tech/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.tech/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.com/about">About</a></p>
+                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybilmayard.com/contact">Contact</a></p>
+                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -318,7 +318,7 @@ permalink: /
                     </div>
                     <div class="col-3">
                         <h4>Get in Touch</h4>
-                        <p><a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a></p>
+                        <p><a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a></p>
                         <p>
                             <a href="https://linkedin.com/in-sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
@@ -330,13 +330,13 @@ permalink: /
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="https://sybilmayard.tech/images/FSB-Member-Logo-White.png"
+                            <img src="https://sybilmayard.com/images/FSB-Member-Logo-White.png"
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.tech/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://sybilmayard.com/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.tech/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybilmayard.com/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
