--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -22,9 +22,9 @@ permalink: /5-best-tools-for-remote-working/
         <meta property="og:type" content="website" />
         <meta property="og:title" content="5 Best Tools for Remote Working | Blog | Sybiltech" />
         <meta property="og:description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools." />
-        <meta property="og:url" content="https://sybilmayard.tech/5-best-tools-for-remote-working/" />
+        <meta property="og:url" content="https://sybilmayard.com/5-best-tools-for-remote-working/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -33,18 +33,18 @@ permalink: /5-best-tools-for-remote-working/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/5-best-tools-for-remote-working/" />
-        <link rel="stylesheet" href="https://sybilmayard.tech/styles.css" type="text/css">
+        <link rel="canonical" href="https://sybilmayard.com/5-best-tools-for-remote-working/" />
+        <link rel="stylesheet" href="https://sybilmayard.com/styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://sybilmayard.tech/favicon.png">
+        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
     </head>
     <body>
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.tech/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybilmayard.com/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -52,17 +52,17 @@ permalink: /5-best-tools-for-remote-working/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.tech/events">Events</a>
-                    <a href="https://sybilmayard.tech/building-business-shopify">Shopify Course</a>                   
+                    <a href="https://sybilmayard.com/events">Events</a>
+                    <a href="https://sybilmayard.com/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/about">About</a>
-                            <a href="https://sybilmayard.tech/clients">Clients</a>
-                            <a href="https://sybilmayard.tech/services">Services</a>
-                            <a href="https://sybilmayard.tech/faqs">FAQs</a>
+                            <a href="https://sybilmayard.com/about">About</a>
+                            <a href="https://sybilmayard.com/clients">Clients</a>
+                            <a href="https://sybilmayard.com/services">Services</a>
+                            <a href="https://sybilmayard.com/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -70,10 +70,10 @@ permalink: /5-best-tools-for-remote-working/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/vidcareer">VidCareer</a>
-                            <a href="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
-                            <a href="https://sybilmayard.tech/tagnav">TagNav</a>
-                            <a href="https://sybilmayard.tech/my-personal-portfolio">My Personal Portfolio</a>
+                            <a href="https://sybilmayard.com/vidcareer">VidCareer</a>
+                            <a href="https://sybilmayard.com/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://sybilmayard.com/tagnav">TagNav</a>
+                            <a href="https://sybilmayard.com/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -81,13 +81,13 @@ permalink: /5-best-tools-for-remote-working/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="https://sybilmayard.tech/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
-                            <a href="https://sybilmayard.tech/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
+                            <a href="https://sybilmayard.com/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://sybilmayard.com/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://sybilmayard.com/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://sybilmayard.com/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="https://sybilmayard.tech/contact">Contact</a>
+                    <a href="https://sybilmayard.com/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -158,14 +158,14 @@ permalink: /5-best-tools-for-remote-working/
                     <li>Restrict screen sharing to the host only</li>
                     <li>Disable "join before host"</li>
                 </ul>
-                <p>So that was a quick rundown of my chosen tools, I hope you found it useful. You can also check out my article <a href="https://sybilmayard.tech/6-tips-for-surviving-remote-working">6 Tips to Survive Remote Working</a>.</p>
+                <p>So that was a quick rundown of my chosen tools, I hope you found it useful. You can also check out my article <a href="https://sybilmayard.com/6-tips-for-surviving-remote-working">6 Tips to Survive Remote Working</a>.</p>
             </div>
         </div>
         <div class="contact section">
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.tech/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.com/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -178,11 +178,11 @@ permalink: /5-best-tools-for-remote-working/
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.tech/about">About</a></p>
-                        <p><a href="https://sybilmayard.tech/services">Services</a></p>
-                        <p><a href="https://sybilmayard.tech/contact">Contact</a></p>
-                        <p><a href="https://sybilmayard.tech/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.tech/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.com/about">About</a></p>
+                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybilmayard.com/contact">Contact</a></p>
+                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -193,7 +193,7 @@ permalink: /5-best-tools-for-remote-working/
                     </div>
                     <div class="col-3">
                         <h4>Get in Touch</h4>
-                        <p><a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a></p>
+                        <p><a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a></p>
                         <p>
                             <a href="https://linkedin.com/in-sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
@@ -205,13 +205,13 @@ permalink: /5-best-tools-for-remote-working/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="https://sybilmayard.tech/images/FSB-Member-Logo-White.png" 
+                            <img src="https://sybilmayard.com/images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.tech/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://sybilmayard.com/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.tech/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybilmayard.com/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
