--- a/vidcareer.html
+++ b/vidcareer.html
@@ -22,9 +22,9 @@ permalink: /vidcareer/
         <meta property="og:type" content="website" />
         <meta property="og:title" content="VidCareer | Online Career Events for SMEs | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard's latest project is VidCareer, a recruitment platform for online career events and a cost-effective alternative to traditional career fairs." />
-        <meta property="og:url" content="https://sybilmayard.tech/vidcareer/" />
+        <meta property="og:url" content="https://sybilmayard.com/vidcareer/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -33,18 +33,18 @@ permalink: /vidcareer/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/vidcareer/" />
-        <link rel="stylesheet" href="https://sybilmayard.tech/styles.css" type="text/css">
+        <link rel="canonical" href="https://sybilmayard.com/vidcareer/" />
+        <link rel="stylesheet" href="https://sybilmayard.com/styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://sybilmayard.tech/favicon.png">
+        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
     </head>
     <body>
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.tech/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybilmayard.com/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -52,17 +52,17 @@ permalink: /vidcareer/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.tech/events">Events</a>
-                    <a href="https://sybilmayard.tech/building-business-shopify">Shopify Course</a>                   
+                    <a href="https://sybilmayard.com/events">Events</a>
+                    <a href="https://sybilmayard.com/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/about">About</a>
-                            <a href="https://sybilmayard.tech/clients">Clients</a>
-                            <a href="https://sybilmayard.tech/services">Services</a>
-                            <a href="https://sybilmayard.tech/faqs">FAQs</a>
+                            <a href="https://sybilmayard.com/about">About</a>
+                            <a href="https://sybilmayard.com/clients">Clients</a>
+                            <a href="https://sybilmayard.com/services">Services</a>
+                            <a href="https://sybilmayard.com/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -70,10 +70,10 @@ permalink: /vidcareer/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/vidcareer">VidCareer</a>
-                            <a href="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
-                            <a href="https://sybilmayard.tech/tagnav">TagNav</a>
-                            <a href="https://sybilmayard.tech/my-personal-portfolio">My Personal Portfolio</a>
+                            <a href="https://sybilmayard.com/vidcareer">VidCareer</a>
+                            <a href="https://sybilmayard.com/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://sybilmayard.com/tagnav">TagNav</a>
+                            <a href="https://sybilmayard.com/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -81,13 +81,13 @@ permalink: /vidcareer/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.tech/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="https://sybilmayard.tech/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
-                            <a href="https://sybilmayard.tech/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
+                            <a href="https://sybilmayard.com/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://sybilmayard.com/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://sybilmayard.com/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://sybilmayard.com/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="https://sybilmayard.tech/contact">Contact</a>
+                    <a href="https://sybilmayard.com/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -121,7 +121,7 @@ permalink: /vidcareer/
                 <ul>
                     <li><a href="https://www.kent.ac.uk/news/society/17829/big-ideas-competition-winner-goes-to-global-competition" target="_blank" rel="noopener noreferrer">Big Ideas Competition Winner goes to Global Competition</a></li>
                     <li><a href="http://www.vtkwglobal.com/2018/finalists" target="_blank" rel="noopener noreferrer">2018 VT Global Entrepreneur Challenge Finalists</a></li>
-                    <li><a href="https://sybilmayard.tech/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
+                    <li><a href="https://sybilmayard.com/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
                 </ul>
 
                 <h2>Market Research</h2>
@@ -129,7 +129,7 @@ permalink: /vidcareer/
 
                 <p>Please download the guide below if you would like more information about the market research.</p>
                 <div class="padding-bottom padding-top">
-                    <a class="btn-primary" href="https://sybilmayard.tech/uploads/VidCareer-Information-v2.pdf" target="_blank">Download VidCareer Info</a>
+                    <a class="btn-primary" href="https://sybilmayard.com/uploads/VidCareer-Information-v2.pdf" target="_blank">Download VidCareer Info</a>
                 </div>
                 <div class="padding-top"><a class="btn-secondary" href="https://www.vidcareer.com" target="_blank" rel="noopener noreferrer">Go to VidCareer</a></div>
            
@@ -139,7 +139,7 @@ permalink: /vidcareer/
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.tech/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.com/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -152,11 +152,11 @@ permalink: /vidcareer/
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.tech/about">About</a></p>
-                        <p><a href="https://sybilmayard.tech/services">Services</a></p>
-                        <p><a href="https://sybilmayard.tech/contact">Contact</a></p>
-                        <p><a href="https://sybilmayard.tech/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.tech/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.com/about">About</a></p>
+                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybilmayard.com/contact">Contact</a></p>
+                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -167,7 +167,7 @@ permalink: /vidcareer/
                     </div>
                     <div class="col-3">
                         <h4>Get in Touch</h4>
-                        <p><a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a></p>
+                        <p><a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a></p>
                         <p>
                             <a href="https://linkedin.com/in-sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
@@ -179,13 +179,13 @@ permalink: /vidcareer/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="https://sybilmayard.tech/images/FSB-Member-Logo-White.png" 
+                            <img src="https://sybilmayard.com/images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.tech/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://sybilmayard.com/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.tech/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybilmayard.com/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
