Update events and key skills

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ permalink: /
                         <img src="https://sybilmayard.com/images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
                     </div>
                     <div class="col-6">                       
-                        <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
+                        <p class="padding-bottom">Sybiltech, Peabody and CNT Associates have partnered together to produce a new webinar
                                 series teaching you how to start your e-commerce business using Shopify.</p>
                         <a class="btn-cnt" href="https://sybilmayard.com/events">View Events</a>          
                     </div>
