--- a/events.html
+++ b/events.html
@@ -105,7 +105,7 @@ permalink: /events/
         </div>
         <div class="main section">
             <div class="container-1000">
-                <p>I have partnered with CNT Associates to produce a series of events delivered 
+                <p>I have partnered with CNT Associates and Peabody to produce a series of events delivered 
                     via Zoom, to help you start and grow your business. To find out more and to 
                     register, click the relevant link below.</p>
                 <div class="row">
@@ -114,7 +114,7 @@ permalink: /events/
                             alt="E-commerce">
                     </div>
                     <div class="col-8">
-                        <h2>Using Shopify to Build an Online Store for Your Organisation - Live</h2>
+                        <!-- <h2>Using Shopify to Build an Online Store for Your Organisation - Live</h2>
                         <p>When: Thursday 4th February 2021 at 2pm GMT</p>
 
                         <p>Where: Zoom (online)</p>
@@ -142,16 +142,34 @@ permalink: /events/
                         <div class="padding-top">
                             <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/using-shopify-to-build-an-online-store-for-your-organisation-stage-2-tickets-131171490459" 
                             target="_blank" rel="noopener noreferrer">Register Now</a>
+                        </div> -->
+
+                        <h2>Thamemead Business Forum</h2>
+                        <p>When: Monday 8th February 2021 at 4pm-5:30pm GMT</p>
+
+                        <p>Where: Zoom (online)</p>
+
+                        <p>Cost: Free</p>
+
+                        <p>Find out how your business can access the potential growth opportunities in Thamesmead.</p>
+
+                        <p>This online forum is open to all individuals, SMEs or corporate partners looking to start develop or grow in Thamesmead.</p>
+
+                        <p>For joining instructions contact: <a href="mailto:madeinthamesmead@peabody.org.uk">madeinthamesmead@peabody.org.uk</a>.</p>
+
+                        <div class="padding-top">
+                            <a class="btn-cnt" href="https://www.thamesmeadnow.org.uk/whats-on/online-business-forum-8-feb/" 
+                            target="_blank" rel="noopener noreferrer">Register Now</a>
                         </div>
                     </div>
                 </div>
-                <p><em>In partnership with...</em></p>
+                <!-- <p><em>In partnership with...</em></p>
                 <div class="center">
                     <a href="https://cntassociates.com" target="_blank" rel="noopener noreferrer">
                         <img src="https://sybilmayard.com/images/CNT_Associates-Empowering-Your-Vision.png" 
                             alt="CNT Associates Empowering Your Vision">
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="contact section">
