Update Events page with structured data

--- a/events.html
+++ b/events.html
@@ -156,12 +156,12 @@ permalink: /events/
                             alt="E-commerce">
                     </div>
                     <div class="col-8">
-                        <!-- <h2>Using Shopify to Build an Online Store for Your Organisation - Live</h2>
-                        <p>When: Thursday 4th February 2021 at 2pm GMT</p>
+                        <h2>Using Shopify to Build an Online Store for Your Organisation - Live</h2>
+                        <p>When: Wednesday 24th March 2021 at 11:00am-12:30pm GMT</p>
 
                         <p>Where: Zoom (online)</p>
 
-                        <p>Cost: £56.48</p>
+                        <p>Cost: £50.27</p>
 
                         <p>This webinar will be presented by two experienced facilitators, Gary 
                             Parker, BA (Hons) Social Science - who will present the Overview and 
@@ -182,36 +182,18 @@ permalink: /events/
 
                         <p>Additional packages and resources are available; please email <a href="mailto:info@cntassociates.com">info@cntassociates.com</a> for details.</p>
                         <div class="padding-top">
-                            <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/using-shopify-to-build-an-online-store-for-your-organisation-stage-2-tickets-131171490459" 
-                            target="_blank" rel="noopener noreferrer">Register Now</a>
-                        </div> -->
-
-                        <h2>Thamemead Business Forum</h2>
-                        <p>When: Monday 8th February 2021 at 4pm-5:30pm GMT</p>
-
-                        <p>Where: Zoom (online)</p>
-
-                        <p>Cost: Free</p>
-
-                        <p>Find out how your business can access the potential growth opportunities in Thamesmead.</p>
-
-                        <p>This online forum is open to all individuals, SMEs or corporate partners looking to start develop or grow in Thamesmead.</p>
-
-                        <p>For joining instructions contact: <a href="mailto:madeinthamesmead@peabody.org.uk">madeinthamesmead@peabody.org.uk</a>.</p>
-
-                        <div class="padding-top">
-                            <a class="btn-cnt" href="https://www.thamesmeadnow.org.uk/whats-on/online-business-forum-8-feb/" 
+                            <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/using-shopify-to-build-an-online-store-for-your-organisation-live-tickets-141266687465" 
                             target="_blank" rel="noopener noreferrer">Register Now</a>
                         </div>
                     </div>
                 </div>
-                <!-- <p><em>In partnership with...</em></p>
+                <p><em>In partnership with...</em></p>
                 <div class="center">
                     <a href="https://cntassociates.com" target="_blank" rel="noopener noreferrer">
                         <img src="https://sybilmayard.com/images/CNT_Associates-Empowering-Your-Vision.png" 
                             alt="CNT Associates Empowering Your Vision">
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="contact section">
