Update CTA on Home page

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ permalink: /
                 <h4>Taking your online business further...</h4>
                 <h1>Sybiltech</h1>
                 <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
-                <a class="btn-primary" href="https://sybilmayard.com/services">My Services</a>
+                <a class="btn-primary" href="https://sybilmayard.com/services">View My Services</a>
             </div>
         </div>
         <div class="services section">
