Change client images on home page to JPG

--- a/index.html
+++ b/index.html
@@ -144,23 +144,23 @@ permalink: /
             <div class="row">
                 <div class="col-3">                        
                     <a href="https://sybilmayard.com/clients#audrey-zeitoun-coaching">
-                        <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.png" 
+                        <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.jpg" 
                         alt="Audrey Zeitoun Coaching"></a>
                     <h4>Audrey Zeitoun Coaching</h4>
                 </div>
                 <div class="col-3">                    
-                <a href="https://sybilmayard.com/clients#find-the-balance"><img src="https://sybilmayard.com/images/clients/find-the-balance.PNG" 
+                <a href="https://sybilmayard.com/clients#find-the-balance"><img src="https://sybilmayard.com/images/clients/find-the-balance.jpg" 
                     alt="Find the Balance"></a>
                 <h4>Find the Balance</h4>
                 </div>
                 <div class="col-3">                       
-                    <a href="https://sybilmayard.com/clients#pathways-21"><img src="https://sybilmayard.com/images/clients/Pathways-21.png" 
+                    <a href="https://sybilmayard.com/clients#pathways-21"><img src="https://sybilmayard.com/images/clients/Pathways-21.jpg" 
                         alt="Pathways 21"></a>
                     <h4>Pathways 21</h4>
                 </div>
                 <div class="col-3">                    
                     <a href="https://sybilmayard.com/clients#gdpr-compliance-consultancy">
-                        <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.png" 
+                        <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.jpg" 
                         alt="The GDPR Compliance Consultancy"></a>
                 <h4>The GDPR Compliance Consultancy</h4>
                 </div>
